Feat : Notification and cross communication